<resources>
    <string name="app_name">Dashboard UI Design with Dark Mode</string>
    <string name="more">More</string>
    <string name="shot_views">Shot Views</string>
    <string name="record">Record</string>
    <string name="clients">clients</string>
    <string name="_395">395</string>
    <string name="impacted">impacted</string>
    <string name="_147">147</string>
    <string name="following">following</string>
    <string name="_820">820</string>
    <string name="north_sylvland">North Sylvland</string>
</resources>