<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textTitle"
       android:tint="@color/white" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardHeader"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@id/viewHeaderBackground"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderBackground">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_background"
        android:padding="@dimen/_14sdp">

        <TextView
            android:id="@+id/textViews"
            android:textColor="@color/primary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shot_views"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:textColor="@color/primary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/layoutClients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/layoutImpacted"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViews">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:src="@drawable/clients"/>

            <TextView
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_395"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutImpacted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/layoutFollowing"
            app:layout_constraintStart_toEndOf="@id/layoutClients"
            app:layout_constraintTop_toBottomOf="@id/textViews">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:src="@drawable/laptop"/>

            <TextView
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/impacted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_147"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFollowing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutImpacted"
            app:layout_constraintTop_toBottomOf="@id/textViews">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:src="@drawable/completed"/>

            <TextView
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_820"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_16sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHeader">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/dashboard_item_1"/>
        <include layout="@layout/dashboard_item_2"/>
        <include layout="@layout/dashboard_item_3"/>
        <include layout="@layout/dashboard_item_4"/>

    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>